--- a/.github/workflows/sync-courts.yml
+++ b/.github/workflows/sync-courts.yml
@@ -20,7 +20,7 @@ jobs:
           
           response=$(curl -s -w "%{http_code}" -X POST \
             "${{ secrets.SUPABASE_URL }}/functions/v1/sync-availability" \
-            -H "Authorization: Bearer ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}" \
+            -H "Authorization: Bearer ${{ secrets.SUPABASE_ANON_KEY }}" \
             -H "Content-Type: application/json" \
             -H "User-Agent: GitHub-Actions" \
             --max-time 120)
