🔧 Fix cron scheduling syntax
✅ Fixed cron ranges that GitHub Actions didn't support
✅ Changed from '9-20' to explicit hour list
✅ Added immediate test workflow to verify scheduling

🎯 Peak hours: Every 5 min during hours 9,10,11,12,13,14,15,16,17,18,19,20 UTC
🌙 Off-peak: Hourly during hours 21,22,23,0,1,2,3,4,5,6,7,8 UTC

📝 Test workflow runs every minute to verify system works

--- a/.github/workflows/sync-peak-hours.yml
+++ b/.github/workflows/sync-peak-hours.yml
@@ -2,8 +2,8 @@ name: Peak Hours Sync (Every 5 min)
 
 on:
   schedule:
-    # Every 5 minutes from 9 AM to 9 PM (UTC) - prime time for cancellation detection
-    - cron: '*/5 9-20 * * *'
+    # Every 5 minutes from 9 AM to 8 PM (UTC) - prime time for cancellation detection
+    - cron: '*/5 9,10,11,12,13,14,15,16,17,18,19,20 * * *'
   
   # Manual trigger
   workflow_dispatch:
