--- a/.github/workflows/sync-off-peak.yml
+++ b/.github/workflows/sync-off-peak.yml
@@ -2,8 +2,8 @@ name: Off-Peak Hours Sync (Hourly)
 
 on:
   schedule:
-    # Every hour from 9 PM to 9 AM (UTC) - maintenance monitoring
-    - cron: '0 21-23,0-8 * * *'
+    # Every hour from 9 PM to 8 AM (UTC) - maintenance monitoring
+    - cron: '0 21,22,23,0,1,2,3,4,5,6,7,8 * * *'
   
   # Manual trigger
   workflow_dispatch:
